@@ -28,6 +28,7 @@
 package prerna.io.connector.google.calendar;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.time.ZoneId;
@@ -53,14 +54,13 @@ import com.google.gson.reflect.TypeToken;
 
 import prerna.io.connector.google.GoogleLoginUtils;
 import prerna.security.HttpHelperUtility;
-import prerna.util.Constants;
 
 public class GoogleCalendarHelper {
 
 	private static final Logger classLogger = LogManager.getLogger(GoogleCalendarHelper.class);
 
 	private static final Gson GSON = new GsonBuilder().disableHtmlEscaping()
-			.setObjectToNumberStrategy(ToNumberPolicy.LONG_OR_DOUBLE).setPrettyPrinting().create();
+			.setObjectToNumberStrategy(ToNumberPolicy.LONG_OR_DOUBLE).create();
 
 	// Calendar event time fields
 	private static final String START = "start";
@@ -68,6 +68,7 @@ public class GoogleCalendarHelper {
 	private static final String START_TIME = "startTime";
 	private static final String END_TIME = "endTime";
 	private static final String DATE_TIME = "dateTime";
+	private static final String DATE = "date";
 	private static final String TIME_ZONE = "timeZone";
 
 	// Event details fields
@@ -111,18 +112,23 @@ public class GoogleCalendarHelper {
 	}
 
 	/**
-	 * 
-	 * @param accessToken
-	 * @param summary
-	 * @param location
-	 * @param desc
-	 * @param startdatetime
-	 * @param enddatetime
-	 * @param zoneId
-	 * @param attendeeEmails
-	 * @param enableVideoConferencing
-	 * @return
-	 * @throws Exception
+	 * Creates a non-recurring Google Calendar event.
+	 *
+	 * @param accessToken             OAuth access token for Google APIs.
+	 * @param summary                 event title.
+	 * @param location                event location.
+	 * @param desc                    event description.
+	 * @param startdatetime           event start timestamp in RFC3339-compatible
+	 *                                format.
+	 * @param enddatetime             event end timestamp in RFC3339-compatible
+	 *                                format.
+	 * @param zoneId                  time zone used for event date-time fields.
+	 * @param attendeeEmails          attendee email addresses to include on the
+	 *                                invite.
+	 * @param enableVideoConferencing whether to attach Google Meet conference
+	 *                                details.
+	 * @return a map containing the created event ID and HTML link.
+	 * @throws Exception if the event creation request fails.
 	 */
 	public static Map<String, Object> createEvent(String accessToken, String summary, String location, String desc,
 			String startdatetime, String enddatetime, ZoneId zoneId, List<String> attendeeEmails,
@@ -154,7 +160,8 @@ public class GoogleCalendarHelper {
 			event.put(END, end);
 
 			List<Map<String, Object>> attendees = new ArrayList<>();
-			for (String email : attendeeEmails) {
+			List<String> safeAttendeeEmails = attendeeEmails != null ? attendeeEmails : new ArrayList<>();
+			for (String email : safeAttendeeEmails) {
 				Map<String, Object> attendee = new HashMap<>();
 				attendee.put(EMAIL, email);
 				attendees.add(attendee);
@@ -199,17 +206,21 @@ public class GoogleCalendarHelper {
 			map.put(LINK, json.get(HTML_LINK));
 			return map;
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to create Google Calendar event with summary '{}'", summary, e);
 			throw e;
 		}
 	}
 
 	/**
-	 * 
-	 * @param accessToken
-	 * @param id
-	 * @return
-	 * @throws Exception
+	 * Reads event details from Google Calendar for a given event ID.
+	 *
+	 * @param accessToken OAuth access token for Google APIs.
+	 * @param id          unique event ID.
+	 * @param zoneId      time zone used to convert recurrence-until values to local
+	 *                    time.
+	 * @return a map containing event details, attendee metadata, and recurrence
+	 *         information.
+	 * @throws Exception if the event cannot be fetched or parsed.
 	 */
 	@SuppressWarnings("unchecked")
 	public static Map<String, Object> readEvent(String accessToken, String id, ZoneId zoneId) throws Exception {
@@ -251,21 +262,8 @@ public class GoogleCalendarHelper {
 			Map<String, Object> start = (Map<String, Object>) json.get(START);
 			Map<String, Object> end = (Map<String, Object>) json.get(END);
 
-			if (start != null && start.get(DATE_TIME) != null) {
-				String startDateTimeStr = (String) start.get(DATE_TIME);
-				String localStartDateTime = startDateTimeStr.substring(0, 19);
-				map.put(START_TIME, localStartDateTime);
-			} else {
-				map.put(START_TIME, null);
-			}
-
-			if (end != null && end.get(DATE_TIME) != null) {
-				String endDateTimeStr = (String) end.get(DATE_TIME);
-				String localEndDateTime = endDateTimeStr.substring(0, 19);
-				map.put(END_TIME, localEndDateTime);
-			} else {
-				map.put(END_TIME, null);
-			}
+			map.put(START_TIME, extractEventTimeValue(start));
+			map.put(END_TIME, extractEventTimeValue(end));
 
 			Map<String, Object> organizer = (Map<String, Object>) json.get(ORGANIZER);
 			map.put(ORGANIZER, organizer != null ? organizer.get(EMAIL) : null);
@@ -303,28 +301,36 @@ public class GoogleCalendarHelper {
 			map.put(UNTIL, untilDateTime);
 			return map;
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to read Google Calendar event id {}", id, e);
 			throw e;
 		}
 	}
 
 	/**
-	 * 
-	 * @param accessToken
-	 * @param id
-	 * @param summary
-	 * @param location
-	 * @param desc
-	 * @param startdatetime
-	 * @param enddatetime
-	 * @param zoneId
-	 * @param attendeeEmails
-	 * @param frequency
-	 * @param until
-	 * @param enableVideoConferencing
-	 * @return
-	 * @throws Exception
+	 * Updates a Google Calendar event and optionally modifies recurrence and Meet
+	 * details.
+	 *
+	 * @param accessToken             OAuth access token for Google APIs.
+	 * @param id                      unique event ID.
+	 * @param summary                 updated event title.
+	 * @param location                updated event location.
+	 * @param desc                    updated event description.
+	 * @param startdatetime           updated start timestamp in RFC3339-compatible
+	 *                                format.
+	 * @param enddatetime             updated end timestamp in RFC3339-compatible
+	 *                                format.
+	 * @param zoneId                  time zone used for date-time conversion.
+	 * @param attendeeEmails          updated attendee email addresses.
+	 * @param frequency               recurrence frequency (DAILY, WEEKLY, or NONE).
+	 * @param untilTime               optional local end date-time for recurring
+	 *                                events. When omitted, recurrence is
+	 *                                open-ended.
+	 * @param enableVideoConferencing whether to attach Google Meet conference
+	 *                                details.
+	 * @return {@code true} when the update request succeeds.
+	 * @throws Exception if request validation or update fails.
 	 */
+	@SuppressWarnings("unchecked")
 	public static Boolean updateEvent(String accessToken, String id, String summary, String location, String desc,
 			String startdatetime, String enddatetime, ZoneId zoneId, List<String> attendeeEmails, String frequency,
 			String untilTime, Boolean enableVideoConferencing) throws Exception {
@@ -333,6 +339,11 @@ public class GoogleCalendarHelper {
 
 		try {
 			String url = String.format(GOOGLE_CALENDAR_UPDATE_URL_TEMPLATE, CALENDAR_ID, id);
+			Map<String, String> headers = GoogleLoginUtils.getBearerHeader(accessToken);
+			String getEventUrl = String.format(GOOGLE_CALENDAR_EVENT_URL_TEMPLATE, id);
+			String existingResponse = HttpHelperUtility.getRequest(getEventUrl, headers, null, null, null);
+			Map<String, Object> existingEvent = GSON.fromJson(existingResponse, new TypeToken<Map<String, Object>>() {
+			}.getType());
 
 			String until = null;
 			if (untilTime != null && !untilTime.isEmpty()) {
@@ -341,29 +352,35 @@ public class GoogleCalendarHelper {
 			}
 
 			Map<String, Object> event = new HashMap<>();
-			event.put(SUMMARY, summary);
-			event.put(LOCATION, location);
-			event.put(DESCRIPTION, desc);
+			event.put(SUMMARY, summary != null ? summary : existingEvent.get(SUMMARY));
+			event.put(LOCATION, location != null ? location : existingEvent.get(LOCATION));
+			event.put(DESCRIPTION, desc != null ? desc : existingEvent.get(DESCRIPTION));
 
-			Map<String, Object> start = new HashMap<>();
-			start.put(DATE_TIME, startdatetime);
-			start.put(TIME_ZONE, zoneId.getId());
-			event.put(START, start);
-
-			Map<String, Object> end = new HashMap<>();
-			end.put(DATE_TIME, enddatetime);
-			end.put(TIME_ZONE, zoneId.getId());
-			event.put(END, end);
-
-			List<Map<String, Object>> attendees = new ArrayList<>();
-			for (String email : attendeeEmails) {
-				Map<String, Object> attendee = new HashMap<>();
-				attendee.put(EMAIL, email);
-				attendees.add(attendee);
+			Map<String, Object> existingStart = (Map<String, Object>) existingEvent.get(START);
+			Map<String, Object> start = buildEventTimePayload(existingStart, startdatetime, zoneId);
+			if (!start.isEmpty()) {
+				event.put(START, start);
 			}
-			event.put(ATTENDEES, attendees);
 
-			if (enableVideoConferencing) {
+			Map<String, Object> existingEnd = (Map<String, Object>) existingEvent.get(END);
+			Map<String, Object> end = buildEventTimePayload(existingEnd, enddatetime, zoneId);
+			if (!end.isEmpty()) {
+				event.put(END, end);
+			}
+
+			if (attendeeEmails != null) {
+				List<Map<String, Object>> attendees = new ArrayList<>();
+				for (String email : attendeeEmails) {
+					Map<String, Object> attendee = new HashMap<>();
+					attendee.put(EMAIL, email);
+					attendees.add(attendee);
+				}
+				event.put(ATTENDEES, attendees);
+			} else if (existingEvent.get(ATTENDEES) != null) {
+				event.put(ATTENDEES, existingEvent.get(ATTENDEES));
+			}
+
+			if (Boolean.TRUE.equals(enableVideoConferencing)) {
 				Map<String, Object> conferenceSolutionKey = new HashMap<>();
 				conferenceSolutionKey.put(TYPE, HANGOUTS_MEET);
 
@@ -375,11 +392,11 @@ public class GoogleCalendarHelper {
 				conferenceData.put(CREATE_REQUEST, createConferenceRequest);
 
 				event.put(CONFERENCE_DATA, conferenceData);
-			} else {
+			} else if (Boolean.FALSE.equals(enableVideoConferencing)) {
 				event.put(CONFERENCE_DATA, null);
 			}
 
-			if (frequency != null) {
+			if (frequency != null && !frequency.trim().isEmpty()) {
 				frequency = frequency.trim().toUpperCase();
 				if (!frequency.equals(DAILY) && !frequency.equals(WEEKLY) && !frequency.equals(NONE)) {
 					throw new IllegalArgumentException("Frequency must be 'DAILY' or 'WEEKLY' or 'NONE'");
@@ -388,30 +405,32 @@ public class GoogleCalendarHelper {
 					event.put(RECURRENCE, null);
 				} else if (frequency.equals(DAILY) || frequency.equals(WEEKLY)) {
 					if (until == null || until.trim().isEmpty()) {
-						throw new IllegalArgumentException("Until date must be provided for recurring events.");
+						event.put(RECURRENCE, Arrays.asList(RRULE_PREFIX + frequency));
+					} else {
+						event.put(RECURRENCE, Arrays.asList(RRULE_PREFIX + frequency + UNTIL_PREFIX + until));
 					}
-					event.put(RECURRENCE, Arrays.asList(RRULE_PREFIX + frequency + UNTIL_PREFIX + until));
 				}
+			} else if (existingEvent.get(RECURRENCE) != null) {
+				event.put(RECURRENCE, existingEvent.get(RECURRENCE));
 			}
 
-			Map<String, String> headers = GoogleLoginUtils.getBearerHeader(accessToken);
 			String jsonBody = GSON.toJson(event);
 			HttpHelperUtility.putRequestStringBody(url, headers, jsonBody, ContentType.APPLICATION_JSON, null, null,
 					null);
 			return true;
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
-			classLogger.warn("Failed to update event", e.getMessage());
-			return false;
+			classLogger.error("Failed to update Google Calendar event id {}", id, e);
+			throw e;
 		}
 	}
 
 	/**
-	 * 
-	 * @param accessToken
-	 * @param id
-	 * @return
-	 * @throws Exception
+	 * Deletes a Google Calendar event by ID.
+	 *
+	 * @param accessToken OAuth access token for Google APIs.
+	 * @param id          unique event ID.
+	 * @return a status map indicating successful deletion.
+	 * @throws Exception if the delete request fails.
 	 */
 	public static Map<String, Object> deleteEvent(String accessToken, String id) throws Exception {
 		final String STATUS_KEY = "status";
@@ -424,26 +443,33 @@ public class GoogleCalendarHelper {
 			result.put(STATUS_KEY, true);
 			return result;
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to delete Google Calendar event id {}", id, e);
 			throw e;
 		}
 	}
 
 	/**
-	 * 
-	 * @param accessToken
-	 * @param summary
-	 * @param location
-	 * @param description
-	 * @param startdatetime
-	 * @param enddatetime
-	 * @param zoneId
-	 * @param attendeeEmails
-	 * @param frequency
-	 * @param until
-	 * @param enableVideoConferencing
-	 * @return
-	 * @throws Exception
+	 * Creates a recurring Google Calendar event.
+	 *
+	 * @param accessToken             OAuth access token for Google APIs.
+	 * @param summary                 event title.
+	 * @param location                event location.
+	 * @param description             event description.
+	 * @param startdatetime           event start timestamp in RFC3339-compatible
+	 *                                format.
+	 * @param enddatetime             event end timestamp in RFC3339-compatible
+	 *                                format.
+	 * @param zoneId                  time zone used for date-time conversion.
+	 * @param attendeeEmails          attendee email addresses to include on the
+	 *                                invite.
+	 * @param frequency               recurrence frequency (DAILY or WEEKLY).
+	 * @param untilTime               optional local end date-time for the recurring
+	 *                                schedule. When omitted, recurrence is
+	 *                                open-ended.
+	 * @param enableVideoConferencing whether to attach Google Meet conference
+	 *                                details.
+	 * @return a map containing the created event ID and HTML link.
+	 * @throws Exception if validation fails or the create request fails.
 	 */
 	public static Map<String, Object> recurringEvent(String accessToken, String summary, String location,
 			String description, String startdatetime, String enddatetime, ZoneId zoneId, List<String> attendeeEmails,
@@ -479,7 +505,8 @@ public class GoogleCalendarHelper {
 			end.put(TIME_ZONE, zoneId.getId());
 			event.put(END, end);
 			List<Map<String, Object>> attendees = new ArrayList<>();
-			for (String email : attendeeEmails) {
+			List<String> safeAttendeeEmails = attendeeEmails != null ? attendeeEmails : new ArrayList<>();
+			for (String email : safeAttendeeEmails) {
 				Map<String, Object> attendee = new HashMap<>();
 				attendee.put(EMAIL, email);
 				attendees.add(attendee);
@@ -500,7 +527,11 @@ public class GoogleCalendarHelper {
 			} else {
 				event.put(CONFERENCE_DATA, null);
 			}
-			event.put(RECURRENCE, Arrays.asList(RRULE_PREFIX + frequency + UNTIL_PREFIX + until));
+			if (until == null || until.trim().isEmpty()) {
+				event.put(RECURRENCE, Arrays.asList(RRULE_PREFIX + frequency));
+			} else {
+				event.put(RECURRENCE, Arrays.asList(RRULE_PREFIX + frequency + UNTIL_PREFIX + until));
+			}
 			Map<String, String> headers = GoogleLoginUtils.getBearerHeader(accessToken);
 			String jsonBody = GSON.toJson(event);
 			String response = HttpHelperUtility.postRequestStringBody(url, headers, jsonBody,
@@ -512,25 +543,28 @@ public class GoogleCalendarHelper {
 			map.put(LINK, json.get(HTML_LINK));
 			return map;
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to create recurring Google Calendar event with summary '{}'", summary, e);
 			throw e;
 		}
 	}
 
 	/**
-	 * 
-	 * @param accessToken
-	 * @param startDateTime
-	 * @param endDateTime
-	 * @return
-	 * @throws Exception
+	 * Lists Google Calendar events within a date-time window.
+	 *
+	 * @param accessToken   OAuth access token for Google APIs.
+	 * @param startDateTime window start in local date-time format (for example,
+	 *                      {@code 2026-03-31T09:00:00}).
+	 * @param endDateTime   window end in local date-time format.
+	 * @param zoneId        user time zone used to convert local date-time values to
+	 *                      RFC3339.
+	 * @return a date-grouped event list.
+	 * @throws Exception if list retrieval or date conversion fails.
 	 */
 	@SuppressWarnings("unchecked")
 	public static List<Map<String, Object>> getEventList(String accessToken, String startDateTime, String endDateTime,
 			ZoneId zoneId) throws Exception {
 		final String GOOGLE_CALENDAR_LIST_TEMPLATE = "https://www.googleapis.com/calendar/v3/calendars/%s/events";
 		final String EVENTS = "events";
-		final String DATE = "date";
 		final String ORDER_BY = "orderBy";
 		final String SINGLE_EVENTS = "singleEvents";
 		final String SINGLE_EVENTS_TRUE = "true";
@@ -559,8 +593,12 @@ public class GoogleCalendarHelper {
 			if (endDateTime != null && !endDateTime.isEmpty()) {
 				endTime = toRfc3339(endDateTime, zoneId.getId());
 			}
-			params.put(TIME_MIN, startTime);
-			params.put(TIME_MAX, endTime);
+			if (startTime != null) {
+				params.put(TIME_MIN, startTime);
+			}
+			if (endTime != null) {
+				params.put(TIME_MAX, endTime);
+			}
 			params.put(MAX_RESULTS, MAX_RESULTS_100);
 			if (pageToken != null) {
 				params.put(PAGE_TOKEN, pageToken);
@@ -568,8 +606,8 @@ public class GoogleCalendarHelper {
 			StringBuilder fullUrl = new StringBuilder(url);
 			fullUrl.append("?");
 			for (Map.Entry<String, String> entry : params.entrySet()) {
-				fullUrl.append(URLEncoder.encode(entry.getKey(), "UTF-8")).append("=")
-						.append(URLEncoder.encode(entry.getValue(), "UTF-8")).append("&");
+				fullUrl.append(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8)).append("=")
+						.append(URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8)).append("&");
 			}
 			fullUrl.setLength(fullUrl.length() - 1);
 			String response = HttpHelperUtility.getRequest(fullUrl.toString(), headers, null, null, null);
@@ -587,8 +625,10 @@ public class GoogleCalendarHelper {
 						map.put(RECURRING_EVENT_ID, item.get(RECURRING_EVENT_ID));
 					}
 					Map<String, Object> start = (Map<String, Object>) item.get(START);
-					String dateTime = (String) start.get(DATE_TIME);
-					String date = dateTime.substring(0, 10);
+					String date = extractEventDate(start);
+					if (date == null || date.isEmpty()) {
+						continue;
+					}
 					if (!events.containsKey(date)) {
 						events.put(date, new ArrayList<>());
 					}
@@ -613,11 +653,12 @@ public class GoogleCalendarHelper {
 	}
 
 	/**
-	 * 
-	 * @param accessToken
-	 * @param eventId
-	 * @return
-	 * @throws Exception
+	 * Searches for a single Google Calendar event by ID.
+	 *
+	 * @param accessToken OAuth access token for Google APIs.
+	 * @param eventId     unique event ID.
+	 * @return a map with basic event details and recurrence type metadata.
+	 * @throws Exception if lookup fails.
 	 */
 	@SuppressWarnings("unchecked")
 	public static Map<String, Object> searchEvent(String accessToken, String eventId) throws Exception {
@@ -638,24 +679,73 @@ public class GoogleCalendarHelper {
 			Map<String, Object> start = (Map<String, Object>) json.get(START);
 			Map<String, Object> end = (Map<String, Object>) json.get(END);
 
-			map.put(START_TIME, start != null ? start.get(DATE_TIME) : null);
-			map.put(END_TIME, end != null ? end.get(DATE_TIME) : null);
+			map.put(START_TIME, extractEventTimeValue(start));
+			map.put(END_TIME, extractEventTimeValue(end));
 
 			Map<String, Object> organizer = (Map<String, Object>) json.get(ORGANIZER);
 			map.put(ORGANIZER, organizer != null ? organizer.get(EMAIL) : null);
 
 			return map;
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to search Google Calendar event id {}", eventId, e);
 			throw e;
 		}
 	}
 
+	@SuppressWarnings("unchecked")
+	private static Map<String, Object> buildEventTimePayload(Map<String, Object> existingTime, String updatedDateTime,
+			ZoneId zoneId) {
+		Map<String, Object> time = new HashMap<>();
+		if (existingTime != null) {
+			time.putAll(existingTime);
+		}
+		if (updatedDateTime != null && !updatedDateTime.isEmpty()) {
+			time.put(DATE_TIME, updatedDateTime);
+			time.put(TIME_ZONE, zoneId.getId());
+			time.remove(DATE);
+		}
+		return time;
+	}
+
+	private static String extractEventTimeValue(Map<String, Object> timeMap) {
+		if (timeMap == null) {
+			return null;
+		}
+		Object dateTimeObj = timeMap.get(DATE_TIME);
+		if (dateTimeObj instanceof String) {
+			String dateTime = (String) dateTimeObj;
+			return dateTime.length() >= 19 ? dateTime.substring(0, 19) : dateTime;
+		}
+		Object dateObj = timeMap.get(DATE);
+		if (dateObj instanceof String) {
+			return (String) dateObj;
+		}
+		return null;
+	}
+
+	private static String extractEventDate(Map<String, Object> timeMap) {
+		if (timeMap == null) {
+			return null;
+		}
+		Object dateTimeObj = timeMap.get(DATE_TIME);
+		if (dateTimeObj instanceof String) {
+			String dateTime = (String) dateTimeObj;
+			return dateTime.length() >= 10 ? dateTime.substring(0, 10) : dateTime;
+		}
+		Object dateObj = timeMap.get(DATE);
+		if (dateObj instanceof String) {
+			return (String) dateObj;
+		}
+		return null;
+	}
+
 	/**
-	 * 
-	 * @param untilTime
-	 * @return
-	 * @throws Exception
+	 * Converts an RFC3339 timestamp to Google Calendar recurrence {@code UNTIL}
+	 * format in UTC.
+	 *
+	 * @param untilTime RFC3339 date-time string with offset.
+	 * @return formatted recurrence end time ({@code yyyyMMdd'T'HHmmss'Z'}).
+	 * @throws Exception if parsing or formatting fails.
 	 */
 	public static String untilFormatConverter(String untilTime) throws Exception {
 		final String YYYY_M_MDD_T_H_HMMSS_Z = "yyyyMMdd'T'HHmmss'Z'";
@@ -666,17 +756,19 @@ public class GoogleCalendarHelper {
 			DateTimeFormatter format = DateTimeFormatter.ofPattern(YYYY_M_MDD_T_H_HMMSS_Z);
 			return utcDateTime.format(format);
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to convert RFC3339 value '{}' to UNTIL format", untilTime, e);
 			throw e;
 		}
 	}
 
 	/**
-	 * 
-	 * @param untilDateTime
-	 * @param zoneId
-	 * @return
-	 * @throws Exception
+	 * Converts a Google recurrence {@code UNTIL} value into local date-time text.
+	 *
+	 * @param untilDateTime recurrence {@code UNTIL} value
+	 *                      ({@code yyyyMMdd'T'HHmmssX}).
+	 * @param zoneId        target zone ID for conversion.
+	 * @return local date-time string ({@code yyyy-MM-dd'T'HH:mm:ss}).
+	 * @throws Exception if parsing or time-zone conversion fails.
 	 */
 	public static String localDateTimeFormatConverter(String untilDateTime, String zoneId) throws Exception {
 		final String YYYY_MM_DD_T_HH_MM_SS = "yyyy-MM-dd'T'HH:mm:ss";
@@ -690,17 +782,19 @@ public class GoogleCalendarHelper {
 			DateTimeFormatter outputFormatter = DateTimeFormatter.ofPattern(YYYY_MM_DD_T_HH_MM_SS);
 			return localDateTime.format(outputFormatter);
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to convert UNTIL value '{}' to local time for zone {}", untilDateTime, zoneId, e);
 			throw e;
 		}
 	}
 
 	/**
-	 * 
-	 * @param dateTime
-	 * @param zoneId
-	 * @return
-	 * @throws Exception
+	 * Converts a local date-time string into RFC3339 format for Google Calendar
+	 * requests.
+	 *
+	 * @param dateTime local date-time string ({@code yyyy-MM-dd'T'HH:mm:ss}).
+	 * @param zoneId   zone ID used to apply the correct offset.
+	 * @return RFC3339 date-time string with offset.
+	 * @throws Exception if parsing or time-zone conversion fails.
 	 */
 	public static String toRfc3339(String dateTime, String zoneId) throws Exception {
 		try {
@@ -709,7 +803,7 @@ public class GoogleCalendarHelper {
 			ZonedDateTime zonedDateTime = localDateTime.atZone(zone);
 			return zonedDateTime.format(DateTimeFormatter.ISO_OFFSET_DATE_TIME);
 		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			classLogger.error("Failed to convert local date-time '{}' in zone {} to RFC3339", dateTime, zoneId, e);
 			throw e;
 		}
 	}
